# HelixDB

./: .gitignore  .replit  README.md  file_structure.txt  go.mod  helixdb.config.json  replit.md
api/: openapi.yaml
api/examples/: create_document.json  delete_document.json  error_response.json  query.json
clients/node/: README.md  index.js
clients/python/: README.md  pyproject.toml
cmd/helixdb/: commands.go  main.go
internal/config/: loader.go  schema.go
internal/server/: http.go  middleware.go  routes.go
internal/storage/: engine.go  wal.go
